Remove elipsis from working directory prompt

--- a/po/ar.po
+++ b/po/ar.po
@@ -894,7 +894,7 @@ msgstr "اختصار جديد"
 
 #. Translators: File Chooser Dialog, window title.
 #: ../menulibre/MenulibreApplication.py:1140
-msgid "Select a working directory…"
+msgid "Select a working directory"
 msgstr "اختيار مجلد العمل..."
 
 #. Translators: File Chooser Dialog, window title.
