--- a/po/ca.po
+++ b/po/ca.po
@@ -928,7 +928,7 @@ msgstr "Drecera nova"
 
 #. Translators: File Chooser Dialog, window title.
 #: ../menulibre/MenulibreApplication.py:1206
-msgid "Select a working directory…"
+msgid "Select a working directory"
 msgstr "Selecciona una carpeta de treball…"
 
 #. Translators: File Chooser Dialog, window title.
