--- a/po/da.po
+++ b/po/da.po
@@ -887,7 +887,7 @@ msgstr "Ny genvej"
 
 #. Translators: File Chooser Dialog, window title.
 #: ../menulibre/MenulibreApplication.py:1139
-msgid "Select a working directory…"
+msgid "Select a working directory"
 msgstr "Vælg en arbejdsmappe..."
 
 #. Translators: File Chooser Dialog, window title.
