--- a/po/eu.po
+++ b/po/eu.po
@@ -841,7 +841,7 @@ msgstr "Laster-tekla berria"
 
 #. Translators: File Chooser Dialog, window title.
 #: ../menulibre/MenulibreApplication.py:1139
-msgid "Select a working directory…"
+msgid "Select a working directory"
 msgstr "Hautatu lan-direktorio bat..."
 
 #. Translators: File Chooser Dialog, window title.
