--- a/po/he.po
+++ b/po/he.po
@@ -838,7 +838,7 @@ msgstr "קיצור דרך חדש"
 
 #. Translators: File Chooser Dialog, window title.
 #: ../menulibre/MenulibreApplication.py:1139
-msgid "Select a working directory…"
+msgid "Select a working directory"
 msgstr "בחירת ספריית פעילות..."
 
 #. Translators: File Chooser Dialog, window title.
