--- a/po/kk.po
+++ b/po/kk.po
@@ -836,7 +836,7 @@ msgstr "Жаңа жарлық"
 
 #. Translators: File Chooser Dialog, window title.
 #: ../menulibre/MenulibreApplication.py:1139
-msgid "Select a working directory…"
+msgid "Select a working directory"
 msgstr "Жұмыс бумасын таңдаңы..."
 
 #. Translators: File Chooser Dialog, window title.
