--- a/po/lt.po
+++ b/po/lt.po
@@ -1641,7 +1641,7 @@ msgstr "Kopijuoti failo vietą"
 
 #. Translators: File Chooser Dialog, window title.
 #: ../menulibre/PathEntry.py:55
-msgid "Select a working directory…"
+msgid "Select a working directory"
 msgstr "Pasirinkite darbinį katalogą..."
 
 #. Translators: File Chooser Dialog, confirmation button.
