--- a/po/menulibre.pot
+++ b/po/menulibre.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-08-06 06:14-0400\n"
+"POT-Creation-Date: 2023-08-06 06:18-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1607,7 +1607,7 @@ msgstr ""
 
 #. Translators: File Chooser Dialog, window title.
 #: ../menulibre/PathEntry.py:55
-msgid "Select a working directory…"
+msgid "Select a working directory"
 msgstr ""
 
 #. Translators: File Chooser Dialog, confirmation button.
