--- a/po/nb.po
+++ b/po/nb.po
@@ -839,7 +839,7 @@ msgstr "Ny snarvei"
 
 #. Translators: File Chooser Dialog, window title.
 #: ../menulibre/MenulibreApplication.py:1139
-msgid "Select a working directory…"
+msgid "Select a working directory"
 msgstr ""
 
 #. Translators: File Chooser Dialog, window title.
