--- a/po/nl.po
+++ b/po/nl.po
@@ -1647,7 +1647,7 @@ msgstr "Bestandslocatie kopiëren"
 
 #. Translators: File Chooser Dialog, window title.
 #: ../menulibre/PathEntry.py:55
-msgid "Select a working directory…"
+msgid "Select a working directory"
 msgstr "Kies een werkmap…"
 
 #. Translators: File Chooser Dialog, confirmation button.
