--- a/po/pl.po
+++ b/po/pl.po
@@ -1643,7 +1643,7 @@ msgstr "Skopiuj lokalizację pliku"
 
 #. Translators: File Chooser Dialog, window title.
 #: ../menulibre/PathEntry.py:55
-msgid "Select a working directory…"
+msgid "Select a working directory"
 msgstr "Wybór katalogu roboczego…"
 
 #. Translators: File Chooser Dialog, confirmation button.
