--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -867,7 +867,7 @@ msgstr "Novo Atalho"
 
 #. Translators: File Chooser Dialog, window title.
 #: ../menulibre/MenulibreApplication.py:1139
-msgid "Select a working directory…"
+msgid "Select a working directory"
 msgstr "Selecione um diretório de trabalho"
 
 #. Translators: File Chooser Dialog, window title.
