--- a/po/pt_PT.po
+++ b/po/pt_PT.po
@@ -840,7 +840,7 @@ msgstr "Novo Atalho"
 
 #. Translators: File Chooser Dialog, window title.
 #: ../menulibre/MenulibreApplication.py:1139
-msgid "Select a working directory…"
+msgid "Select a working directory"
 msgstr ""
 
 #. Translators: File Chooser Dialog, window title.
