--- a/po/sr.po
+++ b/po/sr.po
@@ -886,7 +886,7 @@ msgstr "Нова пречица"
 
 #. Translators: File Chooser Dialog, window title.
 #: ../menulibre/MenulibreApplication.py:1139
-msgid "Select a working directory…"
+msgid "Select a working directory"
 msgstr "Изаберите радну фасциклу..."
 
 #. Translators: File Chooser Dialog, window title.
