--- a/po/sv.po
+++ b/po/sv.po
@@ -1628,7 +1628,7 @@ msgstr "Kopiera filens plats"
 
 #. Translators: File Chooser Dialog, window title.
 #: ../menulibre/PathEntry.py:55
-msgid "Select a working directory…"
+msgid "Select a working directory"
 msgstr "Välj en arbetskatalog…"
 
 #. Translators: File Chooser Dialog, confirmation button.
