--- a/po/uk.po
+++ b/po/uk.po
@@ -888,7 +888,7 @@ msgstr "Новий ярлик"
 
 #. Translators: File Chooser Dialog, window title.
 #: ../menulibre/MenulibreApplication.py:1139
-msgid "Select a working directory…"
+msgid "Select a working directory"
 msgstr "Виберіть робочу теку..."
 
 #. Translators: File Chooser Dialog, window title.
