--- a/po/eo.po
+++ b/po/eo.po
@@ -836,7 +836,7 @@ msgstr ""
 
 #. Translators: File Chooser Dialog, window title.
 #: ../menulibre/MenulibreApplication.py:1139
-msgid "Select a working directory…"
+msgid "Select a working directory"
 msgstr "Elekti kurantan dosierujon..."
 
 #. Translators: File Chooser Dialog, window title.
