--- a/po/ru.po
+++ b/po/ru.po
@@ -961,7 +961,7 @@ msgstr "Новый ярлык"
 
 #. Translators: File Chooser Dialog, window title.
 #: ../menulibre/MenulibreApplication.py:1206
-msgid "Select a working directory…"
+msgid "Select a working directory"
 msgstr "Выберите рабочую папку..."
 
 #. Translators: File Chooser Dialog, window title.
