--- a/NEWS
+++ b/NEWS
@@ -1,31 +1,37 @@
 MenuLibre                                                                  NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 Unreleased, MenuLibre 2.3.2
-- Ported Glade files to Python
-- Header Bars are now enabled for some dialogs, while the main window has one:
-  - About
-  - Command Editor
-  - Icon Browser
-  - Icon File Browser
-  - Parsing Errors
-  - Working Directory Browser
-  - Additionally, the Add button now uses a popover when header bars are enabled
-- UX Improvements
-  - Add and Delete buttons now have tooltips, consistent with the other
-    toolbar buttons
-    - The toolip for the delete button now explains why it's disabled
-  - Category Editor now disables remove/clear actions when empty
-  - Action Editor now disables remove/clear actions when empty
-  - Command Editor now has a help button
-  - Icon Browser visual refresh with a full-length search entry and smaller,
-    consistent icons
-  - Unnecessary indentation was removed from the editor sections
-  - Window dimensions were reduced
-  - Separators are now displayed in the application treeview
-- Fixes
-  - Sidebar borders
-  - Execute button no longer sensitive for separators
-  - Made the "Details" button on the parsing errors infobar translatable
+
+- All Glade and GtkBuilder usage has been replaced with native Python and GTK
+  code. This simplifies future updates and enables porting to newer toolkits.
+- New Features:
+  . Label tooltips have been replaced by a new, on-demand help button.
+    Clicking this button will show a dialog with more information and links.
+  . An on-demand copy button is now displayed when hovering a launcher's
+    filename. Clicking this button will copy the filename to your clipboard.
+- Bug Fixes:
+  . Sidebar: Double-width borders have been fixed
+  . Sidebar: Internal border radii have been removed
+  . Toolbar: Execute button is now disabled when a Separator is selected
+  . Infobar: "Details" button for Parsing Errors is now translatable
+- UX Improvements:
+  . General: Indentation removed from labels
+  . General: Default window size reduced
+  . Toolbar: Tooltip added for the Add button
+  . Toolbar: Tooltip added for the Delete button
+    . When the Delete button is disabled, the tooltip shows an explanation
+  . Header Bars: When active, Header Bars are now used for several dialogs:
+    About, Command Editor, Icon Browser, Icon File Browser, Parsing Errors,
+    Working Directory Browser
+  . Header Bars: When active, the Add button will now use a Popover menu
+    instead of a standard menu.
+  . Action Editor: Remove and Clear buttons are disabled when not usable
+  . Category Editor: Remove and Clear buttons are disabled when not usable
+  . Command Editor: A new help button has been added that goes to the online
+    documentation
+  . Icon Browser: Search box expands the length of the dialog
+  . Icon Browser: Icons are displayed at a smaller, standard size
+  . Sidebar: Separators are now displayed with an icon and faded text
 
 
 30 April 2023, MenuLibre 2.3.1
