--- a/po/menulibre.pot
+++ b/po/menulibre.pot
@@ -1518,7 +1518,7 @@ msgstr ""
 #: ../menulibre/MenulibreApplication.py:744
 msgid ""
 "However, MenuLibre cannot determine how to do this automatically on your "
-"system. Please log out for you menu to update completely."
+"system. Please log out for your menu to update completely."
 msgstr ""
 
 #. Translators: This error is displayed when the user does not
