--- a/po/ru.po
+++ b/po/ru.po
@@ -1588,7 +1588,7 @@ msgstr ""
 #: ../menulibre/MenulibreApplication.py:744
 msgid ""
 "However, MenuLibre cannot determine how to do this automatically on your "
-"system. Please log out for you menu to update completely."
+"system. Please log out for your menu to update completely."
 msgstr ""
 "Однако MenuLibre не может определить, как это сделать в вашей системе "
 "автоматически. Пожалуйста, завершите сеанс, чтобы ваше меню полностью "
