--- a/po/sv.po
+++ b/po/sv.po
@@ -1554,7 +1554,7 @@ msgstr ""
 #: ../menulibre/MenulibreApplication.py:744
 msgid ""
 "However, MenuLibre cannot determine how to do this automatically on your "
-"system. Please log out for you menu to update completely."
+"system. Please log out for your menu to update completely."
 msgstr ""
 "Men MenuLibre kan inte bestämma hur detta ska göras automatiskt på ditt "
 "system. Logga ut för att din meny ska uppdateras helt."
