--- a/po/lt.po
+++ b/po/lt.po
@@ -1557,7 +1557,7 @@ msgstr ""
 #: ../menulibre/MenulibreApplication.py:735
 msgid ""
 "However, MenuLibre cannot determine how to do this automatically on your "
-"system. Please log out for you menu to update completely."
+"system. Please log out for your menu to update completely."
 msgstr ""
 "Vis dėlto, MenuLibre negali nustatyti, kaip tai automatiškai padaryti jūsų "
 "sistemoje. Atsijunkite, kad jūsų meniu būtų pilnai atnaujintas."
